--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -19,7 +19,7 @@
     --ligt-text-color: #FFF;
     --light-gray: #F8F8F8;
     --primary-color: #BB250E;
-    --secondary-color: #B2E3FF;
+    --secondary-color: #ffcece;
 
     --ff-sans: "Montserrat", system-ui, sans-serif;
     --fw-base: 400;
